<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="lima.rocha.contadordefaltas.AdicionaMateria"
    android:background="@color/lightBlue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Field1"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp" />

    <EditText
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:id="@+id/NomeMateria"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:focusable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Field2"
        android:id="@+id/textView3"
        android:layout_below="@+id/NomeMateria"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp" />

    <EditText
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:id="@+id/TotalDeAulas"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:hint="@string/dica"
        android:imeOptions="actionSend"
        android:inputType="number" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adicionar"
        android:id="@+id/Adiciona"
        android:layout_below="@+id/TotalDeAulas"
        android:layout_marginTop="69dp"
        android:textColor="@color/button"
        android:background="@drawable/adiciona"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
