<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="lima.rocha.contadordefaltas.AdicionaFalta"
    android:background="@color/lightBlue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_value"
        android:id="@+id/MateriaFalta"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:focusable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/faltas"
        android:id="@+id/textView5"
        android:layout_below="@+id/MateriaFalta"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/faltas"
        android:layout_below="@+id/textView5"
        android:imeOptions="actionNext"
        android:layout_centerHorizontal="true"
        android:text="0"
        android:gravity="center"
        android:selectAllOnFocus="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/faltasJustificadas"
        android:id="@+id/textView6"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/faltasJustificadas"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:text="0"
        android:gravity="center"
        android:selectAllOnFocus="true"  />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adicionar"
        android:id="@+id/AdicionaFalta"
        android:layout_below="@+id/faltasJustificadas"
        android:layout_centerHorizontal="true"
        android:textColor="@color/button"
        android:background="@drawable/adiciona"
        android:layout_marginTop="54dp" />
</RelativeLayout>
